# domcek-offline-registration

./: .gitignore  main.py  pyproject.toml  requirements.txt
.circleci/: config.yml
client/: index.html  package.json
client/config/: index.js
client/src/: main.js
domcek/: app.py  main.py  run.sh  settings.py
domcek/api/: __init__.py  views.py
domcek/offline/: __init__.py  service.py  views.py
domcek/registration/: __init__.py  service.py  views.py
domcek/shared/: __init__.py  abstract_data_store.py  abstract_service.py  participants_data_store.py  wrong_payments_data_store.py
domcek/static/css/: main.css
domcek/sync/: __init__.py  service.py  views.py
domcek/templates/: all-participants.html  download.html  index.html  layout.html  payment-detail.html  register-participant.html  registration.html  success.html  upload.html  wrong-payments.html
domcek/templates/components/: participants-fields.html  participants-headers.html
domcek/test_data/: participant.json  sample_data.json
domcek/tests/: test_data_store.py  test_participants_data_store.py
templates/: index.html
