[tool.poetry]
name = "domcek-offline-registration"
version = "0.1.0"
description = ""
authors = ["Sebastian Simko <contact@sebastiansimko.sk>"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.0"
flask-CORS = "^3.0"
Flask-Caching = "^1.7"
requests = "^2.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
